--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -15,6 +15,8 @@
         <label for="drawer">Drawer:</label>
         <input type="text" name="drawer" placeholder="Define a drawer to group your notes, e.g. 'Recipes', 'Bad Jokes' or 'Read Later'.">
         <div class="form-buttons">
+
+          <p id="cookies">We are using functional cookies to ensure secure login and payment.</p>
           <button type="submit" value="Submit" class="button-primary form-submit">Save my first note</button>
         </div>
 
