--- a/main/templates/boilerplate/page.html
+++ b/main/templates/boilerplate/page.html
@@ -34,6 +34,7 @@
     <a href="/signup">signup</a>
     {% endif %}
     <a href="/about">about</a>
+    <a href="/doc">doc</a>
   </nav>
 
 </body>
