--- a/main/templates/pages/doc.html
+++ b/main/templates/pages/doc.html
@@ -1,10 +1,10 @@
 {% extends 'boilerplate/page.html' %}
 {% block content %}
 {% load static %}
-<main >
+<main id="main-index">
   <h1 class="index-font slogan">Chaoskasten: Plaintext notes for productive people.</h1>
 
-  <div class="notes">
+  <div class="notes" id="doc-notes">
     <div class="note" id="">
       <h2 class="note-title single-note-title">Notes</h2>
       <div class="note-content">
