--- a/main/templates/pages/about.html
+++ b/main/templates/pages/about.html
@@ -15,8 +15,8 @@
         <p>      We aim to provide you:</p>
         <ul>
           <li>A lean tool: No bloat, no drowning in features.</li>
-          <li>An unopinionated tool: Chaoskasten works whether you are brainstorming on an iMac or collect your favorite blogs on a Linuxbox.</li>
-          <li>A tool to remember: In Chaoskasten, your knowledge is interconnected. No more favorite & forget.</li>
+          <li>A tool to think with: In Chaoskasten, your knowledge is interconnected, just like your thoughts.</li>
+          <li>A learning tool: Every note is a flash card for spaced repetition learning.</li>
         </ul>
       </div>
 
@@ -37,6 +37,18 @@
         <p>{{ countLoginsWeekly }} users checked in within the last seven days.</p>
       </div>
     </article>
+
+    <article class="note">
+      <h2 class="note-title single-note-title">Info</h2>
+      <div class="note-content">
+        <p>
+          Contact:
+        </p>
+          <address><a href="mailto:chaoskasten.mail@gmail.com">Our email</a></address>
+
+      </div>
+    </article>
+
   </div>
 
 </main>
