--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -24,7 +24,14 @@
     </div>
   </div>
 
-<a class="index-font" href="/signup">...or sign up first ($3/month)</a>
+  <ul>
+    <li>
+      <a  href="/signup" class="index-font">...sign up first ($3/month)</a>
+    </li>
+    <li>
+      <a href="/about" class="index-font">...learn what makes us special</a>
+    </li>
+  </ul>
 
 </main>
 
