fix voucher flow and some layout issues

--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -167,14 +167,6 @@ form {
   margin-top: 12px;
 }
 
-.note-drawer {
-  color: #333;
-  border: 1px solid #bbb;
-  padding: 2px 4px;
-  margin: 0;
-  border-radius: 8px;
-}
-
 .note-buttons{
   display: flex;
 }
@@ -380,16 +372,6 @@ form {
   margin: auto;
 }
 
-.forms-drawer-form {
-  margin-bottom: 8px;
-  display: flex;
-  align-items: center;
-}
-
-.forms-drawer-form > * {
-  margin-right: 12px;
-}
-
 /* NOTES VIEW */
 
 #body-default {
@@ -484,6 +466,11 @@ form {
   width: 60%;
 }
 
+
+#index-ul {
+  list-style: none;
+}
+
 .index-buttonbar {
   font-size: 2em;
   display: flex;
@@ -530,12 +517,7 @@ form {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-areas:
-    "a b"
     "a c";
-}
-
-#note-drawers {
-  grid-area: a;
 }
 
 /* Sidebar Collapse */
@@ -557,69 +539,6 @@ form {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-}
-
-.drawerView-drawer {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  padding: 3px;
-  padding-bottom: 150px;
-  grid-gap: 3px;
-
-}
-
-.drawerView-body {
-  display: none;
-}
-
-.drawerView-note {
-  background: #dfdfdf;
-  box-shadow: #111 3px 3px 12px;
-  border-right: 3px solid #555;
-  border-bottom: 3px solid #333;
-  padding: 4px 12px;
-}
-
-.drawerView-note-open {
-    background: white;
-    background: #fbfbfb;
-}
-
-.drawerView-note:hover .drawerView-title {
-  text-decoration: underline 2px;
-  text-decoration-color: #F18A60;
-  font-weight: bold;
-}
-
-.drawerView-note:hover {
-  background: white;
-}
-
-.drawerView-note:hover .drawerView-body {
-  display: block;
-}
-
-.drawerView-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background: white;
-  padding: 30px;
-  border-top: 4px solid #F18A60;
-  box-shadow: -5px 0 5px black;
-  display: flex;
-  justify-content: space-around;
-}
-
-
-.drawerView-link {
-  text-decoration: none;
-}
-
-.drawerView-title-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .dot {
