--- a/main/templates/pages/doc.html
+++ b/main/templates/pages/doc.html
@@ -13,7 +13,7 @@
 
         <h3> Properties </h3>
 
-        Each note has a title, an optional content body, a drawer and a collection of connected notes.
+        Each note has a title, an optional content body and a collection of connected notes.
 
         <ul>
           <li>
@@ -22,9 +22,6 @@
           <li>
             The content body is optional - a note may just be title. However, the body also may contain text, enriched with Markdown lists, images, links, text formatting more.
             A good guide for Markdown can be found <a href="https://guides.github.com/features/mastering-markdown/">here</a>. If you don't know Markdown, don't worry: You can just write good old text as well.
-          </li>
-          <li>
-            The drawer is a means of ordering your notes. You can add drawers in the Settings view. Drawers can be structured however you want (just like drawers in your personal cabinet): You can use one for everything, or make specific ones for projects, years, media types or anything else.
           </li>
           <li>
             Connecting notes is a central feature of Chaoskasten. Every note can have a number of other notes connected to it (how to connect notes is described in the next section). Connect a given note with other notes that are relevant or related to the topic, that you are reminded of, etc. That way you can explore your knowledge, strengthen your transfer knowledge and explore new ideas.
