--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -12,8 +12,6 @@
         <input type="text" name="title" placeholder="Give your note a title to reference it later - like 'Recipe Recommendations from John'">
         <label for="content">Content:</label>
         <textarea name="content" rows="8" cols="80" placeholder="You may write anything here! If you want, you can use Markdown syntax to format your text."></textarea>
-        <label for="drawer">Drawer:</label>
-        <input type="text" name="drawer" placeholder="Define a drawer to group your notes, e.g. 'Recipes', 'Bad Jokes' or 'Read Later'.">
         <div class="form-buttons">
 
           <p id="cookies">We are using functional cookies to ensure secure login and payment.</p>
@@ -24,14 +22,14 @@
     </div>
   </div>
 
-  <ul>
-    <li>
-      <a  href="/signup" class="index-font">...sign up first ($3/month)</a>
-    </li>
-    <li>
-      <a href="/about" class="index-font">...learn what makes us special</a>
-    </li>
-  </ul>
+    <ul id="index-ul">
+      <li>
+        <a  href="/signup" class="index-font">...sign up first ($3/month)</a>
+      </li>
+      <li>
+        <a href="/about" class="index-font">...learn what makes us special</a>
+      </li>
+    </ul>
 
 </main>
 
