--- a/main/templates/registration/payment_form.html
+++ b/main/templates/registration/payment_form.html
@@ -1,3 +1,4 @@
+<a href="" style="position:absolute;top:0;z-index:99">I have a voucher code</a>
 <script src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript">
   var stripe = Stripe('{{stripe_public_key}}');
