--- a/main/templates/pages/profile.html
+++ b/main/templates/pages/profile.html
@@ -27,7 +27,9 @@
   <div class="note">
     <h2>Statistics</h2>
     <ul>
-      <li>You have {{ noteCounter }} notes!</li>
+      <li>You have {{ note_counter_all }} notes!</li>
+      <li>Of those, {{ note_counter_learning }} are in your learning rotation (unless you removed some, that's all of them).</li>
+      <li>So far {{ note_counter_unlearned }} of those are still waiting to be learned for the first time.</li>
     </ul>
 
   </div>
