attempt to fix size of learning queue

--- a/main/templates/pages/profile.html
+++ b/main/templates/pages/profile.html
@@ -29,7 +29,7 @@
     <ul>
       <li>You have {{ note_counter_all }} notes!</li>
       <li>Of those, {{ note_counter_learning }} are in your learning rotation (unless you removed some, that's all of them).</li>
-      <li>So far {{ note_counter_unlearned }} of those are still waiting to be learned for the first time.</li>
+      <li>Right now, {{ note_counter_unlearned }} of those are still waiting to be learned for the first time.</li>
     </ul>
 
   </div>
